--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
+    <h2>Aperte espaço para voar</h2>
     <div wm-flappy></div>
     <script src="js/flappy.js"></script>
 </body>
